--- a/TextGame/.classpath
+++ b/TextGame/.classpath
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="resource"/>
+	<classpathentry kind="lib" path="/Users/enkhjing/Desktop/Java 2/db-derby-10.12.1.1-lib/lib/derby.jar"/>
+	<classpathentry kind="lib" path="/Users/enkhjing/Desktop/Java 2/db-derby-10.12.1.1-lib/lib/derbyclient.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
